--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>My Git Connect Demo Activity</title>
 </head>
 <body>
-	<h1>Hello Git World!, I Made It!</h1>
+	<h1>Hello Git World!, I Made It!!</h1>
 </body>
 </html>
